<resources>
    <string name="tab_words">Words</string>
    <string name="tab_numbers">Numbers</string>
    <string name="app_name">Altibus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_fragment">TestFragment</string>
    <string name="tab_page_num">This is tab: </string>
    <string name="espaceSecured">Espace de paiement sécurisé</string>
    <string name="numeroCarteBancaire">N° de carte bancaire</string>
    <string name="dateExpiration">Date d\'expiration</string>
    <string name="codeVerification">Code de vérification</string>
    <string name="cbHint">Numéro de carte</string>
    <string name="dateExpirationHint">Date</string>
    <string name="codeHint">Code à 3 chiffres</string>
    <string name="mois">Mois</string>
    <string name="annee">Année</string>
	<string name="CMCIC">Le CM-CIC garantit la confidentialité et la sécurité de vos données.</string>
    <string name="leSymbole">Le symbole</string>
    <string name="leSymbole2">indique que la transaction est sécurisée.</string>
    <string name="valideLaCommande">Payer le billet</string>
	<string name="erreurCB">Le numéro de la carte doit comporter 16 chiffres</string>
	<string name="erreurMois">Le mois ne doit pas comporter plus de deux chiffres</string>
	<string name="erreurCode">Le code doit être composé de 3 chiffres</string>
	<string name="erreurAnnee">L\'année doit comporter 2 ou 4 chiffres</string>
	<string name="paymentSuccess">Merci d\'avoir choisi le ebillet Altibus, nous avons bien reçu votre paiement. Votre ebillet est dès à présent enregistré dans votre application et disponible à la validation. Il n\'est valable que sur l\'appareil avec lequel il a été acheté. Vous devrez le composter manuellement le jour de votre voyage, au moment de votre montée à bord de l\'Autocar.</string>
	<string name="paymentRefused">Votre paiement à échoué</string>
	<string name="cgvTitle">CONDITIONS GENERALES\n DU e-BILLET ALTIBUS</string>
	<string name="nouvelleRecherche">Nouvelle réservation</string>
	<string name="effectuerNouvelleRecherche">Souhaitez vous effectuer une nouvelle recherche ?</string>
	<string name="avertissement">Avertissement !</string>
	<string name="cliquerPourEditer">Cliquez pour composter</string>
	<string name="billetComposte">Billet composté</string>
	<string name="pasdeBillet">Aucun billet enregistré</string>
	<string name="billetPerime">Billet invalide</string>
	<string name="appuyezIci">Appuyez ici pour Composter votre e-Billet</string>
	<string name="jmjv">Je monte, je composte !</string>
	<string name="validationDefinitive">Tout compostage est définitif</string>
	<string name="titreDejaValide">CE TITRE A DEJA ETE COMPOSTE</string>
	<string name="nonValable">NON VALABLE (sauf autorisation du transporteur)</string>
	<string name="altibusMenuTitle">Menu Principal</string>
	<string name="voyage">Voyage</string>
	<string name="valideDevantConducteur">Etes-vous en ce moment à bord du Car ?\n\nCe billet est à composter au moment de votre montée à bord et si possible sous les yeux du conducteur.</string>
	<string name="composter">Composter</string>
	<string name="saisirNomPrenom">Saisissez le Prénom / Nom / Age</string>
	<string name="erreurPasDeGareACote">Désolé, aucune gare trouvée dans un rayon de 50km. Veuillez utiliser la fonction de recherche normale.</string>
	<string name="nonComposte">Non valide</string>
	<string name="titreComposte">Titre composté</string>
	<string name="clickAge">Cliquez pour modifier</string>
	<string name="pressBackToSave">Une fois vos informations modifiées, appuyer sur le bouton \"Retour\" de votre téléphone pour sauvegarder vos préférences et revenir à l\'activité principale</string>
	<string name="confirmDeleteOutdated">Etes vous sur de vouloir supprimer ce billet ?\n\nLa suppression sera irréverssible</string>
	<string name="desoleDelai">Désolé il faut un délai de 48h pour acheter ce billet</string>
	<string name="passagerDlgEditionTitle">Choisissez une action</string>
	<string name="erreurRefReservation">Une erreur est survenue lors de la réservation. Si l\'erreur persiste, merci de contacter Altibus par email : info@altibus.com</string>
    <string name="emptyString">""</string>
    <string name="cgv">Ce titre de transport est soumis aux conditions générales du site Altibus.com ainsi qu\'aux conditions particulières suivantes que vous avez acceptées au moment de l\'achat :\n\nCe titre de transport numérique est uniquement valable s\'il est montré (dans son état validé) sur l\'appareil avec lequel il a été acheté (iPhone, iPad ou iPod Touch) au travers de l\'application officielle Altibus. Vous devez valider vous-même votre ebillet au moment de la montée à bord de l\'Autocar.\n\nLe ebillet n\'est ni échangeable ni remboursable, personnel et incessible. Le ebillet ne peut pas être transféré sur un autre appareil et ne peut en aucun cas être présenté sur un autre support (autre téléphone, tablette, imprimé sur papier, écran d\'ordinateur portable...).\n\nL\'appareil doit être en bon état de marche. Les écrans cassés, abîmés ou dépourvus de rétro éclairage ne seront pas acceptés à bord de l\'autocar et seront considérés comme non valables. En cas d\'incident (chute au sol ou dans la neige par exemple) ou de batterie vide, vous devez faire réparer ou recharger votre appareil avant de monter à bord. Par ailleurs vous devez avoir assez de batterie pour pouvoir justifier de votre titre de transport pendant toute la durée du trajet lors d\'éventuels contrôles à bord.\n\nLors des contrôles, vous devrez obligatoirement montrer votre billet sur votre propre appareil et naviguer vous-même dans l\'application (personne d\'autre que vous n\'est habilité à manipuler votre appareil). Le porteur du titre pourra également avoir à présenter une pièce d\'identité officielle en cours de validité avec photo : Carte d\'identité, Passeport, Permis de conduire ou carte de séjour. Le nom, et l\'âge du porteur de cette pièce d\'identité devra être identique à celui mentionné sur le présent titre de transport.\n\nUn ebillet peut être acheté jusqu\'à la dernière minute avant le départ d\'un Autocar à l\'exception des trajets sur réservation obligatoire (TAD), des trajets de nuit et des trajets dans le sens retour de stations (qui sont à confirmer 48h à l\'avance). Ce titre est uniquement valable pour l\'horaire, la date, et le parcours désignés ci dessus. Dans les autres cas, et sauf accord du transporteur, ce titre sera considéré comme non valable et vous devrez vous munir d\'un autre titre pour être en règle. Ce titre doit être conservé jusqu\'à la sortie du car.\n\nAltibus décline toute responsabilité :\n- Pour les anomalies pouvant survenir en cours de commande, de manipulation de l\'appareil, de l\'affichage du titre de transport dans la mesure où elle ne les a pas provoquées intentionnellement.\n- en cas de perte, vol ou utilisation illicite.\n\nEN CAS DE NON RESPECT DE L\'UNE DES RÈGLES PRECISES CI-DESSUS, CE TITRE SERA CONSIDÉRÉ COMME NON VALABLE.</string>
    <string name="commercant">Commerçant</string>
    <string name="ref">Référence</string>
    <string name="altibusDotComRef">Altibus.com (1206934)</string>
    <string name="montantTransaction">Montant de la transaction : </string>
    <string name="acceptAndPay">Accepter et payer</string>
    <string name="editer">Editer</string>
    <string name="cancel">Annuler</string>
    <string name="displayFillUpMessage">Merci de cliquer pour remplir les données du nouveau passager</string>
    <string name="supprimer">Supprimer</string>
    <string name="allerRetour">Aller Retour</string>
    <string name="trajetDetails">Détails du trajet</string>
    <string name="allerSimple">Aller simple</string>
    <string name="prix">Prix</string>
    <string name="commander">Commander</string>
    <string name="passagers">Passager(s)</string>
    <string name="passager">Passager</string>
    <string name="passagerss">Passagers</string>
    <string name="attentionTT">Attention !</string>
    <string name="saisirNom">Nom</string>
    <string name="saisirPrenom">Prénom</string>
    <string name="saisirAge">0</string>
    <string name="saisirAgeString">Saisir votre age</string>
    <string name="pasPlusdeDouze">Vous ne pouvez pas saisir plus de 12 passagers.</string>
    <string name="erreurNom">Le nom entré n\'est pas valide.</string>
    <string name="erreurPrenom">Le prénom entré n\'est pas valide.</string>
    <string name="erreurAge">L\'age du passager doit être compris entre 0 et 120 ans.</string>
    <string name="erreurEmptyUserPref">Les données du passager principal sont érronnées. Merci de remplir les champs suivants dans le menu "Mon Compte" : </string>
    <string name="erreurEmptyUserPrefEmail">- adresse email</string>
    <string name="erreurEmptyUserPrefAdresse">- adresse </string>
    <string name="erreurEmptyUserPrefTel">- numéro de téléphone</string>
    <string name="erreurEmptyUserPrefVille">- ville</string>
    <string name="erreurEmptyUserPrefCodePostal">- code Postal</string>
    <string name="erreurEmptyUserPrefPays">- pays</string>
    <string name="addPassager">Ajout passager</string>
    <string name="passagersInvalides">Les passagers suivants comportent des erreurs qui doivent être corrigées :\n</string>
    <string name="ajouterPassager">Ajouter un passager</string>
    <string name="saisirInfoPassager">Saisir les informations</string>
    <string name="completerInfoPassager">Cliquez-ici pour compléter les informations du passager</string>
    <string name="editerInfoPassager">Modifier les informations</string>
    <string name="modifierlePassager">Modifier le passager</string>
    <string name="modifierPassagerPrincipal">Modifier les coordonnées du passager principal</string>
    <string name="ouvrirPrefPassagerPrincipal">Editer les paramètres du passager principal</string>
    <string name="modifierPassager">Modifier les données du passager</string>
    <string name="passagerFirst">Passager Principal</string>
    <string name="entrezPassagers">Saisir les passagers</string>
    <string name="validerPassagers">Valider les passagers</string>
    <string name="loading">Chargement ...</string>
    <string name="erreurPasDHorraire">Désolé, aucun trajet trouvé pour le jour sélectionné. Merci de saisir un autre jour.</string>
    <string name="gareDepart">Départ</string>
    <string name="gareArrivee">Arrivée</string>
    <string name="dateDepart">Date aller</string>
    <string name="dateRetour">Date retour</string>
    <string name="horraireAller">Heure aller</string>
    <string name="pref_user_last_name_summary">Saisissez votre nom</string>
    <string name="pref_user_last_name">Nom *</string>
    <string name="pref_user_first_name_summary">Saisissez votre prénom</string>
    <string name="pref_user_first_name">Prénom</string>
    <string name="pref_user_age">Age *</string>
    <string name="pref_user_set_age">Saisissez votre age</string>
    <string name="pref_user_contact">Contact</string>
    <string name="pref_user_telephone">Téléphone</string>
    <string name="pref_user_set_telephone">Numéro de téléphone</string>
    <string name="pref_user_email">Adresse email *</string>
    <string name="pref_user_set_email">Saisissez votre email</string>
    <string name="pref_user_adresse">Adresse</string>
    <string name="pref_user_set_adresse">Saisissez votre adresse</string>
    <string name="pref_user_adresse2">Complément d\'adresse</string>
    <string name="pref_user_civilite">Civilité</string>
    <string name="pref_user_countries">Pays *</string>
    <string name="pref_user_countries_summary">Choisissez votre pays</string>
    <string name="pref_user_ville">Ville *</string>
    <string name="pref_user_ville_summary">Choisissez votre ville</string>
    <string name="pref_user_code_postal_summary">Saisissez votre code postal</string>
    <string name="pref_user_code_postal">Code Postal *</string>
</resources>