<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_civilite" >
        <EditTextPreference
                android:title="@string/pref_user_last_name"
                android:summary="@string/pref_user_last_name_summary"
                android:defaultValue="@string/saisirNom"
                android:key="prefUserLastName"/>
        <EditTextPreference
            	android:defaultValue="@string/saisirPrenom"
                android:title="@string/pref_user_first_name"
                android:summary="@string/pref_user_first_name_summary"
                android:key="prefUserFirstName"/>
        <EditTextPreference
                android:title="@string/pref_user_age"
                android:summary="@string/pref_user_set_age"
                android:defaultValue="0"
                android:key="prefUserAge"/>
    </PreferenceCategory>
     
    
    <PreferenceCategory android:title="@string/pref_user_contact" >
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_telephone"
                android:summary="@string/pref_user_set_telephone"
                android:key="prefUserTelephone"/>
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_email"
                android:summary="@string/pref_user_set_email"
                android:key="prefUserEmail"/>
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_adresse"
                android:summary="@string/pref_user_set_adresse"
                android:key="prefUserAddress"/>
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_adresse2"
                android:summary="@string/pref_user_set_adresse"
                android:key="prefUserAddress2"/>
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_code_postal"
                android:summary="@string/pref_user_code_postal_summary"
                android:key="prefUserCodePostal"/>
        <EditTextPreference
            	android:defaultValue=""
                android:title="@string/pref_user_ville"
                android:summary="@string/pref_user_ville_summary"
                android:key="prefUserVille"/>
        <ListPreference
            android:key="prefUserCountry"
            android:defaultValue="France"
            android:summary="@string/pref_user_countries_summary"
            android:title="@string/pref_user_countries" />
                
    </PreferenceCategory>

<!--     <PreferenceCategory android:title="@string/pref_update_setting" > -->
<!--         <CheckBoxPreference -->
<!--             android:defaultValue="false" -->
<!--             android:key="prefSendReport" -->
<!--             android:summary="@string/pref_send_report_summary" -->
<!--             android:title="@string/pref_send_report" > -->
<!--         </CheckBoxPreference> -->

<!--     </PreferenceCategory> -->
 
</PreferenceScreen>