<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/greenDark"
        android:padding="5dp"
        android:text="@string/modifierPassager"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/pref_user_first_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/etPrenom"
        android:layout_below="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etPrenom"
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etNom"
        android:layout_alignBottom="@+id/etNom"
        android:layout_alignParentLeft="true"
        android:text="@string/pref_user_last_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etNom"
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etAge"
        android:layout_alignParentLeft="true"
        android:text="@string/pref_user_age"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <RelativeLayout
        android:id="@+id/rlValidPassagers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_and_green_button"
        android:clickable="true"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <View
            android:id="@+id/View01"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/valid_icon"
            android:duplicateParentState="true" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/View01"
            android:duplicateParentState="true"
            android:lines="1"
            android:paddingRight="5dp"
            android:text="@string/modifierlePassager"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/add_passager_button_text" />

    </RelativeLayout>
</RelativeLayout>
